--- a/app/src/main/res/layout/category_nav_fragment.xml
+++ b/app/src/main/res/layout/category_nav_fragment.xml
@@ -11,8 +11,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/CatNavBar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
     </androidx.recyclerview.widget.RecyclerView>
 
